--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1405,7 +1405,40 @@ body {
 }
 
 .seasons {
-
+  &__blank{
+    align-self: center;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    gap: 9px;
+    justify-content: center;
+    color: #FFFFFF;
+    border-radius: 10px;
+    background-color: $red;
+    padding: 14px 24px;
+    & img{
+      flex: 0 0 23px;
+      width: 23px;
+      user-select: none;
+    }
+    transition: all 0.3s ease 0s;
+    @media(any-hover: hover) {
+      &:hover {
+        background-color: $hover;
+      }
+    }
+    @media(max-width: $md) {
+      margin-top: 15px;
+    }
+    @media(max-width: $xs) {
+      align-self: stretch;
+      padding: 14px 10px;
+      & img{
+        flex: 0 0 20px;
+        width: 20px;
+      }
+    }
+  }
   &__container {
     display: flex;
     flex-direction: column;
@@ -1423,6 +1456,11 @@ body {
         margin: 0 auto;
         max-width: 220px;
         justify-content: space-between;
+      }
+    }
+    @media(max-width: $xs) {
+      & > .title br{
+        display: none;
       }
     }
   }
@@ -1660,7 +1698,58 @@ body {
 }
 
 .slider-block {
-
+  &__tabs{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    @media(max-width: $sm) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+    }
+    & a{
+      padding: 12px 50px;
+      text-align: center;
+      background-color: #EEEEEE;
+      border-radius: 10px;
+      transition: all 0.3s ease 0s;
+      @media(max-width: $sm) {
+        padding: 12px;
+      }
+      @media(any-hover: hover) {
+        &:hover {
+          color: $blue;
+        }
+      }
+      &.active{
+        background-color: $blue;
+        color: #FFFFFF;
+      }
+    }
+  }
+  &__tab{
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    .tabs &{
+      display: none;
+      &.target{
+        display: flex;
+      }
+    }
+    & > .slider-actions{
+      display: none;
+    }
+    @media(max-width: $md) {
+      gap: 40px;
+    }
+    @media(max-width: $sm) {
+      gap: 30px;
+      & > .slider-actions{
+        display: flex;
+      }
+    }
+  }
   &__container {
     display: flex;
     flex-direction: column;
@@ -1727,6 +1816,15 @@ body {
   }
   &__slider {
     max-width: 100%;
+    [data-content] &{
+      transform: scale(0.9);
+      opacity: 0;
+      transition: all 0.3s ease 0s;
+    }
+    [data-content].active &{
+      transform: scale(1);
+      opacity: 1;
+    }
     & .swiper-slide{
       height: auto;
       display: flex;
@@ -3521,6 +3619,11 @@ body {
     @media(max-width: $sm) {
       gap: 80px;
     }
+    @media(max-width: $xs) {
+      & .title br{
+        display: none;
+      }
+    }
   }
 }
 
@@ -3833,6 +3936,176 @@ br.hide-on-mob{
     @media(any-hover: hover) {
       &:hover {
         background-color: #3695C0;
+      }
+    }
+  }
+}
+
+
+.help {
+
+  &__container {
+  }
+
+  &__body {
+    background-color: #EEEEEE;
+    border-radius: 10px;
+    padding: 70px 30px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 50px;
+    padding-right: 150px;
+    @media(max-width: $md) {
+      padding: 50px 30px;
+      padding-right: 60px;
+    }
+    @media(max-width: $sm) {
+      padding: 40px 25px;
+      display: block;
+    }
+    @media(max-width: $xs) {
+      padding: 33px 18px;
+    }
+  }
+  &__content{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 35px;
+    @media(max-width: $md) {
+      gap: 30px;
+    }
+    @media(max-width: $xs) {
+      gap: 24px;
+    }
+  }
+  &__title {
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    gap: 27px;
+    @media(max-width: $sm) {
+      font-size: 16px;
+    }
+    @media(max-width: $xs) {
+      font-size: 14px;
+    }
+  }
+
+  &__dec {
+    position: relative;
+    display: none;
+    @media(max-width: $sm) {
+      display: block;
+    }
+    &:after{
+      content: '';
+      position: absolute;
+      border-radius: 7px;
+      width: 51px;
+      height: 25px;
+      background-color: $blue;
+      z-index: 1;
+      top: -6px;
+      right: -9.5px;
+    }
+    & span{
+      position: relative;
+      z-index: 2;
+      width: 51px;
+      height: 25px;
+      z-index: 2;
+      border-radius: 7px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: #FFFFFF;
+      background-color: $red;
+      font-size: 10px;
+      font-weight: 600;
+      text-transform: uppercase;
+      &:after{
+        content: '';
+        position: absolute;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 8px solid $red;
+        left: 20%;
+        top: 100%;
+      }
+    }
+  }
+
+  &__decor {
+    position: relative;
+    @media(max-width: $sm) {
+      display: none;
+    }
+    & span{
+      width: 120px;
+      height: 70px;
+      border-radius: 7px;
+      display: flex;
+      z-index: 2;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: #FFFFFF;
+      background-color: $red;
+      font-size: 20px;
+      font-weight: 600;
+      text-transform: uppercase;
+      position: relative;
+      &:after{
+        content: '';
+        position: absolute;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-top: 15px solid $red;
+        left: 20%;
+        top: 100%;
+      }
+    }
+    &:after{
+      content: '';
+      position: absolute;
+      border-radius: 7px;
+      width: 120px;
+      height: 70px;
+      background-color: $blue;
+      z-index: 1;
+      top: -22px;
+      right: -30px;
+    }
+  }
+
+  &__call {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-size: 20px;
+    font-weight: 600;
+    & img{
+      flex: 0 0 24px;
+      width: 24px;
+    }
+    transition: all 0.3s ease 0s;
+    @media(any-hover: hover) {
+      &:hover{
+        color: $blue;
+      }
+    }
+    @media(max-width: $xs) {
+      font-size: 14px;
+      gap: 10px;
+      & img{
+        flex: 0 0 18px;
+        width: 18px;
       }
     }
   }
