--- a/css/style.css
+++ b/css/style.css
@@ -1926,6 +1926,54 @@ body:not(.lock) .header.hide {
 .seo__text {
   line-height: 1.4;
 }
+.seo__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 25px;
+  line-height: 1.4;
+}
+@media (max-width: 767px) {
+  .seo__list {
+    gap: 20px;
+  }
+}
+.seo__list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 20px;
+}
+.seo__list-item img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 35px;
+          flex: 0 0 35px;
+  width: 35px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transform: translateY(15%);
+          transform: translateY(15%);
+}
+@media (max-width: 767px) {
+  .seo__list-item {
+    gap: 15px;
+  }
+  .seo__list-item img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 25px;
+            flex: 0 0 25px;
+    width: 25px;
+  }
+}
 .seo__image {
   border-radius: 10px;
   overflow: hidden;
@@ -4389,6 +4437,13 @@ span.active ~ .seasons__ico span img:first-child {
   max-width: 100%;
   overflow: hidden;
 }
+@media (max-width: 767px) {
+  .abode__photo {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
+}
 .abode__photo img {
   width: 100%;
   height: 100%;
@@ -4442,6 +4497,11 @@ span.active ~ .seasons__ico span img:first-child {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+  .abode__wrapper > .button:not(:has(img)) {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .abode__top {
@@ -5218,8 +5278,32 @@ span.active ~ .seasons__ico span img:first-child {
     font-size: 24px;
   }
 }
+.rest__bigtitle {
+  font-size: 40px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+@media (max-width: 1100px) {
+  .rest__bigtitle {
+    font-size: 28px;
+  }
+}
+@media (max-width: 767px) {
+  .rest__bigtitle {
+    font-size: 24px;
+  }
+}
 .rest__text {
   line-height: 1.35;
+}
+.rest__text a {
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+@media (any-hover: hover) {
+  .rest__text a:hover {
+    color: #5AC1F0;
+  }
 }
 .rest__button {
   -ms-flex-item-align: start;
@@ -5765,4 +5849,153 @@ span.active ~ .seasons__ico span img:first-child {
             flex: 0 0 18px;
     width: 18px;
   }
+}
+
+.table {
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+@media (max-width: 550px) {
+  .table {
+    max-width: calc(100vw - 24px);
+  }
+}
+.table table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #EEEEEE;
+}
+.table table th, .table table td {
+  padding: 20px 30px;
+}
+@media (max-width: 550px) {
+  .table table th, .table table td {
+    padding: 15px;
+  }
+}
+.table table th:last-child, .table table td:last-child {
+  white-space: nowrap;
+}
+.table table thead {
+  background-color: #D23552;
+  color: #FFFFFF;
+  text-align: left;
+  font-weight: 700;
+}
+.table table tbody tr td {
+  border-bottom: 1px solid #CFCFCF;
+}
+
+.faq__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
+}
+@media (max-width: 1023px) {
+  .faq__container {
+    gap: 40px;
+  }
+}
+@media (max-width: 550px) {
+  .faq__container {
+    gap: 30px;
+  }
+}
+.faq__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+}
+@media (max-width: 1023px) {
+  .faq__items {
+    gap: 20px;
+  }
+}
+@media (max-width: 550px) {
+  .faq__items {
+    gap: 15px;
+  }
+}
+.faq__body {
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  max-height: 0;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  padding: 0 25px;
+}
+@media (max-width: 767px) {
+  .faq__body {
+    padding: 0 15px;
+  }
+}
+.faq__item.active .faq__body {
+  margin-top: 40px;
+  margin-bottom: 20px;
+  pointer-events: auto;
+  opacity: 1;
+  visibility: visible;
+}
+@media (max-width: 1023px) {
+  .faq__item.active .faq__body {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .faq__item.active .faq__body {
+    margin-top: 15px;
+    margin-bottom: 10px;
+  }
+}
+.faq__item {
+  overflow: hidden;
+}
+.faq__top {
+  background-color: #F3F2F2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 10px;
+  font-weight: 700;
+  padding: 30px 25px;
+  cursor: pointer;
+}
+@media (max-width: 767px) {
+  .faq__top {
+    padding: 20px 15px;
+  }
+}
+.faq__top img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 18px;
+          flex: 0 0 18px;
+  width: 18px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.faq__item.active .faq__top img {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
