--- a/css/style.css
+++ b/css/style.css
@@ -5855,6 +5855,9 @@ span.active ~ .seasons__ico span img:first-child {
   max-width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+  width: 100%;
 }
 @media (max-width: 550px) {
   .table {
@@ -5874,7 +5877,7 @@ span.active ~ .seasons__ico span img:first-child {
     padding: 15px;
   }
 }
-.table table th:last-child, .table table td:last-child {
+.table table th:not(:first-child), .table table td:not(:first-child) {
   white-space: nowrap;
 }
 .table table thead {
@@ -5998,4 +6001,39 @@ span.active ~ .seasons__ico span img:first-child {
 .faq__item.active .faq__top img {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+}
+
+.cost__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
+}
+@media (max-width: 1023px) {
+  .cost__container {
+    gap: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .cost__container {
+    gap: 30px;
+  }
+}
+.cost__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+.cost__bottom b {
+  color: #D23552;
+  font-weight: 600;
 }
