--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4173,6 +4173,8 @@ br.hide-on-mob{
   max-width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
+  align-self: stretch;
+  width: 100%;
   @media(max-width: $xs) {
     max-width: calc(100vw - 24px);
   }
@@ -4185,7 +4187,7 @@ br.hide-on-mob{
       @media(max-width: $xs) {
         padding: 15px;
       }
-      &:last-child{
+      &:not(:first-child){
         white-space: nowrap;
       }
     }
@@ -4282,6 +4284,30 @@ br.hide-on-mob{
       & img{
         transform: rotate(90deg);
       }
+    }
+  }
+}
+
+.cost {
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    @media(max-width: $md) {
+      gap: 40px;
+    }
+    @media(max-width: $sm) {
+      gap: 30px;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    & b{
+      color: $red;
+      font-weight: 600;
     }
   }
 }
