--- a/css/style.css
+++ b/css/style.css
@@ -5887,7 +5887,14 @@ span.active ~ .seasons__ico span img:first-child {
   font-weight: 700;
 }
 .table table tbody tr td {
+  color: #333333;
   border-bottom: 1px solid #CFCFCF;
+}
+.table.white table {
+  background-color: #FFFFFF;
+}
+.table.not-full {
+  max-width: 630px;
 }
 
 .faq__container {
@@ -6036,4 +6043,101 @@ span.active ~ .seasons__ico span img:first-child {
 .cost__bottom b {
   color: #D23552;
   font-weight: 600;
+}
+
+.how__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
+}
+@media (max-width: 1023px) {
+  .how__container {
+    gap: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .how__container {
+    gap: 30px;
+  }
+}
+.how__text a {
+  font-weight: 600;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+@media (any-hover: hover) {
+  .how__text a:hover {
+    color: #5AC1F0;
+  }
+}
+.how__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 45px;
+}
+@media (max-width: 1023px) {
+  .how__content {
+    gap: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .how__content {
+    gap: 20px;
+  }
+}
+.how__description {
+  display: grid;
+  gap: 40px;
+  grid-template-columns: 405px 1fr;
+}
+@media (max-width: 1023px) {
+  .how__description {
+    gap: 25px;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
+    grid-auto-rows: 1fr;
+  }
+}
+.how__desc {
+  padding: 40px 25px 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  color: #424242;
+  background-color: #EEEEEE;
+  border-radius: 10px;
+}
+.how__desc > b {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 20px;
+  color: #5AC1F0;
+}
+@media (max-width: 1023px) {
+  .how__desc {
+    padding: 30px 24px 40px;
+  }
+}
+@media (max-width: 767px) {
+  .how__desc {
+    gap: 20px;
+    padding: 20px;
+  }
+  .how__desc b {
+    font-size: 18px;
+  }
 }
