--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4438,3 +4438,258 @@ br.hide-on-mob{
     }
   }
 }
+
+.partners {
+
+		&__container {
+      display: flex;
+      flex-direction: column;
+      gap: 60px;
+      @media(max-width: $md) {
+        gap: 40px;
+      }
+      @media(max-width: $sm) {
+        gap: 30px;
+      }
+		}
+
+		&__text {
+      max-width: 675px;
+		}
+
+    &__items {
+      display: grid;
+      gap: 40px;
+      grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+      @media(max-width: $md) {
+        gap: 20px;
+      }
+		}
+
+		&__item {
+      background-color: #FFFFFF;
+      min-height: 194px;
+      padding: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      & img{
+        border-radius: 10px;
+        height: 100%;
+        max-height: 150px;
+      }
+      @media(max-width: $sm) {
+        min-height: 150px;
+        & img{
+          max-height: 120px;
+        }
+      }
+		}
+}
+
+.questions {
+
+		&__container {
+      display: flex;
+      flex-direction: column;
+      gap: 60px;
+      @media(max-width: $md) {
+        gap: 40px;
+      }
+      @media(max-width: $sm) {
+        gap: 30px;
+      }
+		}
+
+		&__text {
+      max-width: 643px;;
+		}
+
+		&__form {
+      display: grid;
+      gap: 20px;
+      grid-template-columns: repeat(auto-fill, minmax(min(220px, 100%), 1fr));
+      & button{
+        text-align: center;
+        font-size: inherit;
+        color: #FFFFFF;
+        font-weight: 0;
+        background-color: $red;
+        border-radius: 10px;
+        padding: 17px 15px;
+        transition: all 0.3s ease 0s;
+        @media(any-hover: hover) {
+          &:hover{
+            background-color: $hover;
+          }
+        }
+      }
+      & input{
+        padding: 17px 15px;
+        width: 100%;
+        min-width: 0;
+        font-size: inherit;
+        font-weight: 400;
+        color: #000000;
+        background-color: #E6E8F0;
+        &::placeholder{
+          transition: all 0.3s ease 0s;
+          color: #666666;
+          opacity: 1;
+        }
+        &:focus::placeholder{
+          opacity: 0;
+        }
+      }
+		}
+}
+
+.line {
+  margin: -30px 0;
+  @media(max-width: $md) {
+    margin: 0;
+  }
+  &__container {
+    & hr{
+      height: 1px;
+      background-color: #DDDDDD;
+    }
+  }
+}
+
+.offer {
+  position: relative;
+  padding: 120px 0;
+  @media(max-width: $md) {
+    padding: 80px 0;
+  }
+  @media(max-width: $sm) {
+    padding: 45px 0;
+  }
+  &__bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 0;
+    &:after{
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.35);
+    }
+    & img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+    }
+  }
+
+  &__container {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    & .title{
+      color: #FFFFFF;
+    }
+    @media(max-width: $md) {
+      gap: 40px;
+    }
+    @media(max-width: $sm) {
+      gap: 30px;
+    }
+	}
+}
+.offer {
+
+  &__cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(330px, 100%), 1fr));
+    gap: 40px;
+    @media(max-width: $md) {
+      gap: 30px;
+    }
+    @media(max-width: $sm) {
+      gap: 25px;
+    }
+  }
+
+  &__card {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 60px 30px;
+    & hr{
+      background-color: $blue;
+      height: 2px;
+      width: 75px;
+      margin: 0 auto;
+    }
+    @media(max-width: 1230px) {
+      padding: 40px 30px;
+      gap: 30px;
+    }
+    @media(max-width: $sm) {
+      padding: 30px 20px;
+    }
+  }
+
+  &__top {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    text-align: center;
+    & span{
+      max-width: 270px;
+      margin: 0 auto;
+    }
+  }
+
+  &__name {
+    color: $blue;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    @media(max-width: $sm) {
+      font-size: 18px;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    line-height: calc(30/18);
+    & ul{
+      padding-left: 0;
+      list-style: none;
+    }
+  }
+
+  &__button {
+    padding: 17px;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: $blue;
+    transition: all 0.3s ease 0s;
+    border-radius: 10px;
+    max-width: 230px;
+    width: 100%;
+    margin: auto auto 0;
+    @media(any-hover: hover) {
+      &:hover {
+        background-color: #3695C0;
+      }
+    }
+  }
+}
